# pure-ogl-demo

./: .clang-format  .gitignore  CMakeLists.txt
Cross-platform/: CMakeLists.txt  ogl_func.h  ogl_gfx.c  ogl_gfx.cc  ogl_gfx.h  utils.h
Linux/: CMakeLists.txt  linux_main.c  linux_main.h  linux_ogl.c  linux_ogl.h
Windows/: CMakeLists.txt  note.md  win_load_func.c  win_load_func.cc  win_main.c  win_main.cc  win_main.h  win_note.md  win_ogl.c  win_ogl.cc  win_ogl.h
